bundled_metadata/force-app/main/default/objects/Account/fields/EUSFA_Last_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Last_Visit_Date__c</fullName>
    <label>Last Visit Date</label>
    <type>DateTime</type>
</CustomField>