bundled_metadata/force-app/main/default/objects/Account/fields/EUSFA_Next_Visit__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Next_Visit__c</fullName>
    <label>Next Visit</label>
    <type>DateTime</type>
</CustomField>