bundled_metadata/force-app/main/default/objects/Account/fields/EUSFA_Picos_Points__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Picos_Points__c</fullName>
    <label>Picos Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>