bundled_metadata/force-app/main/default/objects/Account/fields/EUSFA_Visits_Executed__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Visits_Executed__c</fullName>
    <label>Visits Executed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>