bundled_metadata/force-app/main/default/objects/Account/fields/EUSFA_Weeks_Since_Last_Visit__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Weeks_Since_Last_Visit__c</fullName>
    <label>OLD - Weeks Since Last Visit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>