bundled_metadata/force-app/main/default/objects/Account/fields/EUSFA_Weeks_Since_Last_Visit_Formula__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Weeks_Since_Last_Visit_Formula__c</fullName>
    <formula>IF(ISBLANK(EUSFA_Last_Visit_Date__c), NULL, FLOOR((TODAY() - DATEVALUE(EUSFA_Last_Visit_Date__c)) / 7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks Since Last Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>