bundled_metadata/force-app/main/default/objects/Account/fields/External_Segmentation_Bevs__c.field-meta.xml
<CustomField>
    <fullName>External_Segmentation_Bevs__c</fullName>
    <label>External Segmentation Beverages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>