bundled_metadata/force-app/main/default/objects/Account/fields/GDPR_Date_Last_Checked__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Date_Last_Checked__c</fullName>
    <label>GDPR Date Last Checked</label>
    <type>Date</type>
</CustomField>