bundled_metadata/force-app/main/default/objects/Account/fields/GLN__c.field-meta.xml
<CustomField>
    <fullName>GLN__c</fullName>
    <label>GLN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>