bundled_metadata/force-app/main/default/objects/Account/fields/GTM_Model__c.field-meta.xml
<CustomField>
    <fullName>GTM_Model__c</fullName>
    <description>Go-To-Market model of the customer</description>
    <label>GTM Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DSD</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>