bundled_metadata/force-app/main/default/objects/Account/fields/GTM_Status__c.field-meta.xml
<CustomField>
    <fullName>GTM_Status__c</fullName>
    <label>GTM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>At-risk</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Captured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>