bundled_metadata/force-app/main/default/objects/Account/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <label>ImageURL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>