bundled_metadata/force-app/main/default/objects/Account/fields/KeyAccountId__c.field-meta.xml
<CustomField>
    <fullName>KeyAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-referencing lookup to the Key Account this store belongs to. Used by the Customer Pricing batch to match stores to Key Account-level pricing configurations.</description>
    <label>Key Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Key Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chain Stores</relationshipLabel>
    <relationshipName>Key_Account_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>