bundled_metadata/force-app/main/default/objects/Account/fields/L1_Channel__c.field-meta.xml
<CustomField>
    <fullName>L1_Channel__c</fullName>
    <description>L1 Channel</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L1_Channel</valueSetName>
    </valueSet>
</CustomField>