bundled_metadata/force-app/main/default/objects/Account/fields/L2_Subchannel__c.field-meta.xml
<CustomField>
    <fullName>L2_Subchannel__c</fullName>
    <description>L2 Subchannel</description>
    <label>Sub Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L2_Subchannel</valueSetName>
    </valueSet>
</CustomField>