bundled_metadata/force-app/main/default/objects/Account/fields/L3_Bevs_Pricegroup_Cluster__c.field-meta.xml
<CustomField>
    <fullName>L3_Bevs_Pricegroup_Cluster__c</fullName>
    <label>PS - L3 Bevs Pricegroup Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricegroup_Cluster_Value_Segmentation</valueSetName>
    </valueSet>
</CustomField>