bundled_metadata/force-app/main/default/objects/Account/fields/L3_Bevs_Value_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>L3_Bevs_Value_Segmentation__c</fullName>
    <label>PS Segmentation Beverages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricegroup_Cluster_Value_Segmentation</valueSetName>
    </valueSet>
</CustomField>