bundled_metadata/force-app/main/default/objects/Account/fields/L3_Classification__c.field-meta.xml
<CustomField>
    <fullName>L3_Classification__c</fullName>
    <description>L3 Local Definition</description>
    <label>Store Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L3_Local_Definition</valueSetName>
    </valueSet>
</CustomField>