bundled_metadata/force-app/main/default/objects/Account/fields/L4_Classification__c.field-meta.xml
<CustomField>
    <fullName>L4_Classification__c</fullName>
    <description>L4 Local Definition</description>
    <label>Store Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L4_Local_Definition</valueSetName>
    </valueSet>
</CustomField>