bundled_metadata/force-app/main/default/objects/Account/fields/Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Date__c</fullName>
    <description>Date when the last order was sent</description>
    <label>Last Order Date</label>
    <type>Date</type>
</CustomField>