bundled_metadata/force-app/main/default/objects/Account/fields/Legacy_Store_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Store_ID__c</fullName>
    <description>Legacy name of the customer</description>
    <label>Legacy Store ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>