bundled_metadata/force-app/main/default/objects/Account/fields/Legacy_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System_ID__c</fullName>
    <description>Legacy identifier of the customer</description>
    <label>Legacy System ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>