bundled_metadata/force-app/main/default/objects/Account/fields/Local_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Local_Tax_ID__c</fullName>
    <label>Local Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>