bundled_metadata/force-app/main/default/objects/Account/fields/Market_ID__c.field-meta.xml
<CustomField>
    <fullName>Market_ID__c</fullName>
    <description>Market in which the customer is based</description>
    <label>Market ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
                <isActive>false</isActive>
                <label>UK</label>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>RO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>