bundled_metadata/force-app/main/default/objects/Account/fields/Microsegment__c.field-meta.xml
<CustomField>
    <fullName>Microsegment__c</fullName>
    <label>Shopper Led Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On the Go</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Modern Urban</fullName>
            </value>
            <value>
                <fullName>Small Town Core</fullName>
            </value>
            <value>
                <fullName>Diverse Suburban</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>