bundled_metadata/force-app/main/default/objects/Account/fields/Missing_MSL_Visit_Count__c.field-meta.xml
<CustomField>
    <fullName>Missing_MSL_Visit_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Missing MSL Visit Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>