bundled_metadata/force-app/main/default/objects/Account/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Customer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>