bundled_metadata/force-app/main/default/objects/Account/fields/Open_Hours_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Open_Hours_End_Time__c</fullName>
    <description>Time when the store closes each day</description>
    <label>Open Hours End Time</label>
    <type>Time</type>
</CustomField>