bundled_metadata/force-app/main/default/objects/Account/fields/Open_Hours_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Open_Hours_Start_Time__c</fullName>
    <description>Time when the store opens each day</description>
    <label>Open Hours Start Time</label>
    <type>Time</type>
</CustomField>