bundled_metadata/force-app/main/default/objects/Account/fields/Payer_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Payer_Email_Address__c</fullName>
    <label>Payer Email Address</label>
    <type>Email</type>
</CustomField>