bundled_metadata/force-app/main/default/objects/Account/fields/Picos_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Picos_Opportunity__c</fullName>
    <label>Picos Points Opportunity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>