bundled_metadata/force-app/main/default/objects/Account/fields/Pricegroup_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Pricegroup_Cluster__c</fullName>
    <description>Grouping of customers by pricing logic</description>
    <label>Pricegroup Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>