bundled_metadata/force-app/main/default/objects/Account/fields/Primary_Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Primary_Wholesaler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Wholesaler</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts(Wholesaler)</relationshipLabel>
    <relationshipName>Accounts_Wholesaler</relationshipName>
    <type>Lookup</type>
</CustomField>