bundled_metadata/force-app/main/default/objects/Account/fields/PS_L3_Bevs_Value_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>PS_L3_Bevs_Value_Segmentation__c</fullName>
    <label>PS - L3 Bevs Value Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricegroup_Cluster_Value_Segmentation</valueSetName>
    </valueSet>
</CustomField>