bundled_metadata/force-app/main/default/objects/Account/fields/PS_L4_Shopper_Led_Cluster__c.field-meta.xml
<CustomField>
    <fullName>PS_L4_Shopper_Led_Cluster__c</fullName>
    <label>PS L4 Shopper Led Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_L4_Shopper_Led_Cluster</valueSetName>
    </valueSet>
</CustomField>