bundled_metadata/force-app/main/default/objects/Account/fields/Seasonal_Closed_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Closed_End_Date__c</fullName>
    <description>Customer Seasonality End Date</description>
    <label>Seasonal Closed End Date</label>
    <type>Date</type>
</CustomField>