bundled_metadata/force-app/main/default/objects/Account/fields/Seasonal_Status__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Status__c</fullName>
    <description>Whether the store operates seasonally</description>
    <label>Seasonal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>