bundled_metadata/force-app/main/default/objects/Account/fields/Secondary_Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Wholesaler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Wholesaler</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Secondary Wholesaler)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>