bundled_metadata/force-app/main/default/objects/Account/fields/Self_Certified__c.field-meta.xml
<CustomField>
    <fullName>Self_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS - Self Certification</label>
    <type>Checkbox</type>
</CustomField>