bundled_metadata/force-app/main/default/objects/Account/fields/Store_Email__c.field-meta.xml
<CustomField>
    <fullName>Store_Email__c</fullName>
    <description>Store Email</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>