bundled_metadata/force-app/main/default/objects/Account/fields/Store_Email_Optin__c.field-meta.xml
<CustomField>
    <fullName>Store_Email_Optin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Email Opt in</label>
    <type>Checkbox</type>
</CustomField>