bundled_metadata/force-app/main/default/objects/Account/fields/Store_GTM_Status__c.field-meta.xml
<CustomField>
    <fullName>Store_GTM_Status__c</fullName>
    <description>Go-To-Market status of a store</description>
    <label>Store GTM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Captured</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>At-Risk</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>