bundled_metadata/force-app/main/default/objects/Account/fields/Store_Phone_SMS_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Store_Phone_SMS_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Phone SMS Opt in</label>
    <type>Checkbox</type>
</CustomField>