bundled_metadata/force-app/main/default/objects/Account/fields/Store_SMS_OptIn__c.field-meta.xml
<CustomField>
    <fullName>Store_SMS_OptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Phone SMS Opt In</label>
    <type>Checkbox</type>
</CustomField>