bundled_metadata/force-app/main/default/objects/Account/fields/Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Type__c</fullName>
    <label>Store Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Store</fullName>
            </value>
            <value>
                <fullName>Flagship Store</fullName>
            </value>
            <value>
                <fullName>Virtual Store</fullName>
            </value>
            <value>
                <fullName>Van Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>