bundled_metadata/force-app/main/default/objects/Account/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <description>Official tax identification number for the Customer</description>
    <label>VAT/Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>