bundled_metadata/force-app/main/default/objects/Account/fields/Total_Missing_MSL_count__c.field-meta.xml
<CustomField>
    <fullName>Total_Missing_MSL_count__c</fullName>
    <description>Total number of missing MSL products</description>
    <label>Total Missing MSL count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>