bundled_metadata/force-app/main/default/objects/Account/fields/Total_MSL_count__c.field-meta.xml
<CustomField>
    <fullName>Total_MSL_count__c</fullName>
    <description>Total Number of MSL Products</description>
    <label>Total MSL count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>