bundled_metadata/force-app/main/default/objects/Account/fields/UoM_Foods__c.field-meta.xml
<CustomField>
    <fullName>UoM_Foods__c</fullName>
    <label>UoM Foods</label>
    <description>Unit of measure for Food</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kilos</fullName>
            </value>
            <value>
                <fullName>Liters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>