bundled_metadata/force-app/main/default/objects/Account/fields/User_Friendly_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Friendly_Id__c</fullName>
    <description>Auto-generated 9-digit identifier for Customer and Prospect Accounts when Salesforce is the system of record and no external customer ID is provided. Used to support EDF integration.</description>
    <displayFormat>{000000000}</displayFormat>
    <label>User Friendly Id</label>
    <type>AutoNumber</type>
</CustomField>