bundled_metadata/force-app/main/default/objects/Account/fields/Valid_from_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_from_Date__c</fullName>
    <description>Date from which the customer account is considered active/valid in the system</description>
    <label>Customer Valid from Date</label>
    <type>Date</type>
</CustomField>