bundled_metadata/force-app/main/default/objects/Account/fields/Value_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Value_Segmentation__c</fullName>
    <description>Customer commercial segmentation based on sales potential</description>
    <label>Value Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>