bundled_metadata/force-app/main/default/objects/Account/fields/Wholesaler_Store_ID__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Store_ID__c</fullName>
    <description>External ID of the wholesaler’s store</description>
    <label>Wholesaler Store ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>