bundled_metadata/force-app/main/default/objects/Account/recordTypes/Payer.recordType-meta.xml
<RecordType>
    <fullName>Payer</fullName>
    <active>true</active>
    <label>Payer</label>
</RecordType>