bundled_metadata/force-app/main/default/objects/Account/recordTypes/Wholesaler.recordType-meta.xml
<RecordType>
    <fullName>Wholesaler</fullName>
    <active>true</active>
    <label>Wholesaler</label>
</RecordType>