bundled_metadata/force-app/main/default/objects/Account/validationRules/Deactivate_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Deactivate_date_validation</fullName>
    <active>true</active>
    <description>Validates deactivated date occurs after valid from date</description>
    <errorConditionFormula>Valid_from_Date__c &gt; Deactivate_Date__c</errorConditionFormula>
    <errorMessage>Deactivate date must be after valid from date</errorMessage>
</ValidationRule>